[package]
name = "pchain-client-rs"
version = "0.4.1"
authors = ["ParallelChain Lab <info@parallelchain.io>"]
edition = "2018"
description = "pchain-client-rs: ParallelChain F Rust Client Library."
license = "Apache-2.0"

[lib]
name = "pchain_client_rs"
path = "src/lib.rs"
doctest = false

[dependencies]
borsh = "=0.10.2"
bytes = "1.1"
hex = "0.4"
pchain-types = { path = "../../types/rust", features = ["keygen"] }
regex = "1.5"
reqwest = {version = "0.11", features = ["json"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-big-array = "0.5"
sha2 = "0.10"
tokio = { version = "0.2", features = ["full"] }

# It still uses old version of rand(v0.7). 
ed25519-dalek = "1.0.1"
# ed25519-dalek requires rand(v0.7)
rand = "0.7"
# rand_chacha requires rand (v0.7) to operate
rand_chacha = "0.2"
