[package]
name = "pchain-client"
version = "0.4.3"
authors = ["ParallelChain Lab <info@parallelchain.io>"]
edition = "2018"
description = "Client library for the ParallelChain Fullnode RPC"
repository = "https://github.com/parallelchain-io/pchain-client-rust"
keywords = ["blockchain", "parallelchain", "crypto", "library", "client"]
categories = ["cryptography::cryptocurrencies"]
license = "Apache-2.0"

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
borsh = "=0.10.2"
bytes = "1.1"
pchain-types = { git = "https://github.com/parallelchain-io/pchain-types-rust", branch = "protocol_v0.5" }
reqwest = {version = "0.11", features = ["json"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-big-array = "0.5"
tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1.73"